Harden player factory instantiation