@@ -1,12 +1,10 @@
 package com.winrisk.game.ai;
 
 import java.security.SecureRandom;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
 import java.util.stream.Collectors;
 
-@SuppressWarnings("serial")
 public class PlayerFactory {
     private static final Random RANDOM = new SecureRandom();
 
@@ -14,21 +12,18 @@ public class PlayerFactory {
     private static final Class<? extends PlayerInterface> HUMAN;
 
     static {
-        List<Class<? extends PlayerInterface>> ALL = new ArrayList<Class<? extends PlayerInterface>>() {
-            {
-                add(PlayerAI.class);
-                add(EasyAI.class);
-                add(ContinentAI.class);
-                add(BalancedAI.class);
-                add(BorderGuardAI.class);
-                add(RandomAI.class);
-            }
-        };
-        AI = ALL.stream()
+        List<Class<? extends PlayerInterface>> all = List.of(
+                PlayerAI.class,
+                EasyAI.class,
+                ContinentAI.class,
+                BalancedAI.class,
+                BorderGuardAI.class,
+                RandomAI.class);
+        AI = all.stream()
                 .filter(clas -> clas
                         .isAnnotationPresent(ArtificialIntelligence.class))
                 .collect(Collectors.toList());
-        HUMAN = ALL
+        HUMAN = all
                 .stream()
                 .filter(clas -> !clas
                         .isAnnotationPresent(ArtificialIntelligence.class))
@@ -37,11 +32,10 @@ public class PlayerFactory {
 
     private static <T> T buildClass(Class<? extends T> clas) {
         try {
-            return clas.newInstance();
-        } catch (Exception e) {
-            e.printStackTrace();
+            return clas.getDeclaredConstructor().newInstance();
+        } catch (ReflectiveOperationException e) {
+            throw new IllegalStateException("Could not instantiate " + clas.getName(), e);
         }
-        return null;
     }
 
     public static PlayerInterface getHuman() {
